--- a/recentAcquisition.html
+++ b/recentAcquisition.html
@@ -61,19 +61,13 @@
 		</div>
 	</section>
 
-	<main class="body browsePage">
-		<div class="recentAcquisitions">
+	<main class="body recentAcquisitionsPage">
+		<!-- <div class="recentAcquisitions">
 			<div class="header">
 				<p>Recently acquired:</p>
 				<p>For a more inclusive list, please <a href="#">click here.</a></p>
 			</div>
 			<div id="listCarousel" class="carousel slide" data-ride="carousel">
-			  <!-- <ol class="carousel-indicators">
-			    <li data-target="#listCarousel" data-slide-to="0" class="active"></li>
-			    <li data-target="#listCarousel" data-slide-to="1"></li>
-			    <li data-target="#listCarousel" data-slide-to="2"></li>
-			    <li data-target="#listCarousel" data-slide-to="3"></li>
-			  </ol> -->
 			  <div class="carousel-inner" role="listbox">
 			    <div class="item active">
 			     	<div class="listContainer">
@@ -163,18 +157,16 @@
 			    </div>
 			  </div>
 			  <a class="left carousel-control" href="#listCarousel" role="button" data-slide="prev">
-			    <!-- <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> -->
 			    <span class="sr-only">Previous</span>
 			  </a>
 			  <a class="right carousel-control" href="#listCarousel" role="button" data-slide="next">
-			    <!-- <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> -->
 			    <span class="sr-only">Next</span>
 			  </a>
 			</div>
-		</div>
+		</div> -->
 		<div class="control">
 			<div class="header">
-				<p>Browse All Materials</p>
+				<p>Recent Acquisitions</p>
 			</div>
 			<div class="sort">
 				<label> Sort by: </label>
@@ -193,6 +185,7 @@
 				<div class="edition col"> Edition </div>
 				<div class="published col"> Published </div>
 				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
 			</div>
 			<div class="itemRow">
 				<div class="title col"> Title </div>
@@ -200,6 +193,7 @@
 				<div class="edition col"> Edition </div>
 				<div class="published col"> Published </div>
 				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
 			</div>
 			<div class="itemRow">
 				<div class="title col"> Title </div>
@@ -207,6 +201,7 @@
 				<div class="edition col"> Edition </div>
 				<div class="published col"> Published </div>
 				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
 			</div>
 			<div class="itemRow">
 				<div class="title col"> Title </div>
@@ -214,6 +209,7 @@
 				<div class="edition col"> Edition </div>
 				<div class="published col"> Published </div>
 				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
 			</div>
 			<div class="itemRow">
 				<div class="title col"> Title </div>
@@ -221,6 +217,7 @@
 				<div class="edition col"> Edition </div>
 				<div class="published col"> Published </div>
 				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
 			</div>
 			<div class="itemRow">
 				<div class="title col"> Title </div>
@@ -228,6 +225,47 @@
 				<div class="edition col"> Edition </div>
 				<div class="published col"> Published </div>
 				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
+			</div>
+			<div class="itemRow">
+				<div class="title col"> Title </div>
+				<div class="author col"> Author </div>
+				<div class="edition col"> Edition </div>
+				<div class="published col"> Published </div>
+				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
+			</div>
+			<div class="itemRow">
+				<div class="title col"> Title </div>
+				<div class="author col"> Author </div>
+				<div class="edition col"> Edition </div>
+				<div class="published col"> Published </div>
+				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
+			</div>
+			<div class="itemRow">
+				<div class="title col"> Title </div>
+				<div class="author col"> Author </div>
+				<div class="edition col"> Edition </div>
+				<div class="published col"> Published </div>
+				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
+			</div>
+			<div class="itemRow">
+				<div class="title col"> Title </div>
+				<div class="author col"> Author </div>
+				<div class="edition col"> Edition </div>
+				<div class="published col"> Published </div>
+				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
+			</div>
+			<div class="itemRow">
+				<div class="title col"> Title </div>
+				<div class="author col"> Author </div>
+				<div class="edition col"> Edition </div>
+				<div class="published col"> Published </div>
+				<div class="availability col"> Availability </div>
+				<div class="acquired col"> Date Acquired </div>
 			</div>
 		</div>
 	</main>
