Updated footer links

--- a/home.html
+++ b/home.html
@@ -111,9 +111,9 @@
 					<div class="left block">
 						<ol>
 							<li>iACADEMY</li>
-							<li><a href="#">Official Website</a></li>
+							<li><a href="http://www.iacademy.edu.ph/site/home/">Official Website</a></li>
 							<li><a href="#">Library</a></li>
-							<li><a href="#">Student Portal</a></li>
+							<li><a href="http://isims.iacademy.edu.ph/iacademy/students/">Student Portal</a></li>
 						</ol>
 					</div>
 					<div class="mid block">
@@ -121,9 +121,9 @@
 							<li>iACADEMY Library</li>
 						</ol>
 						<div class="social">
-							<a href="#"><i class="fi-social-blogger"></i></a>
-							<a href="#"><i class="fi-social-facebook"></i></a>
-							<a href="#"><i class="fi-social-twitter"></i></a>
+							<a href="https://iacademylibrary.wordpress.com/"><i class="fi-social-blogger"></i></a>
+							<a href="https://www.facebook.com/iacademylibrary/"><i class="fi-social-facebook"></i></a>
+							<a href="https://twitter.com/iacademylibrary"><i class="fi-social-twitter"></i></a>
 						</div>
 					</div>
 					<!-- <div class="mid block">
