--- a/advancedSearch.html
+++ b/advancedSearch.html
@@ -61,115 +61,56 @@
 		</div>
 	</section>
 
-	<main class="body recentAcquisitionsPage">
-		<!-- <div class="recentAcquisitions">
-			<div class="header">
-				<p>Recently acquired:</p>
-				<p>For a more inclusive list, please <a href="#">click here.</a></p>
-			</div>
-			<div id="listCarousel" class="carousel slide" data-ride="carousel">
-			  <div class="carousel-inner" role="listbox">
-			    <div class="item active">
-			     	<div class="listContainer">
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     	</div>
-			    </div>
-
-			    <div class="item">
-			      <div class="listContainer">
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     	</div>
-			    </div>
-
-			    <div class="item">
-			      <div class="listContainer">
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     		<div class="list col">
-			     			<a href="#">
-				     			<img src="assets/img/no_image.jpg">
-				     			<p>BOOK TITLE</p>
-				     			<p>Author, Year Published</p>
-				     			<p>Summary</p>
-				     		</a>
-			     		</div>
-			     	</div>
-			    </div>
-			  </div>
-			  <a class="left carousel-control" href="#listCarousel" role="button" data-slide="prev">
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#listCarousel" role="button" data-slide="next">
-			    <span class="sr-only">Next</span>
-			  </a>
-			</div>
-		</div> -->
+	<main class="body advancedSearchPage">
 		<div class="control">
 			<div class="search">
-				<input type="text">
+				<form>
+					<input type="text">
+					<button type="submit">Submit</button>
+					<div class="filters">
+						<div class="left block">
+							<p>Search by</p>
+							<div><input type="checkbox"><label>Title</label></div>
+							<div><input type="checkbox"><label>Author</label></div>
+							<div><input type="checkbox"><label>Tags</label></div>
+						</div>
+						<div class="mid block">
+							<p>Type of Material</p>
+							<div><input type="checkbox"><label>Digital Media</label></div>
+							<div><input type="checkbox"><label>Book</label></div>
+							<div><input type="checkbox"><label>Thesis</label></div>
+							<div><input type="checkbox"><label>Periodical</label></div>
+						</div>
+						<div class="right block">
+							<p>&nbsp;</p>
+							<div class="genre">
+								<label>Genre:</label>
+								<select>
+									<option>Psychology</option>
+									<option>Marketing</option>
+									<option>Animation</option>
+								</select>
+							</div>
+							<div class="year">
+								<label>Year published:</label>
+								<select>
+									<option>2001</option>
+									<option>2002</option>
+									<option>2003</option>
+								</select>
+								<span> to </span>
+								<select>
+									<option>2001</option>
+									<option>2002</option>
+									<option>2003</option>
+								</select>
+							</div>
+						</div>
+					</div>
+				</form>
 			</div>
 			<div class="header">
-				<p>Advance Search</p>
+				<p>Advanced Search</p>
 			</div>
 			<div class="sort">
 				<label> Sort by: </label>
