--- a/viewMaterial.html
+++ b/viewMaterial.html
@@ -61,46 +61,151 @@
 		</div>
 	</section>
 
-	<main class="body mainPage">
-		<div class="divWrapper">
+	<main class="body materialPage">
+		<div class="blockWrapper">
 			<div class="left block">
-				<div class="welcome">
-					<p>Welcome to the iACADEMY Library</p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. 
-					<br/>
-					<br/>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</p>
-				</div>
-				<div class="quickNav">
-					<div class="left quick">
-						<a href="#">
-							<div>
-								<i class="fi-book"></i>
-								Browse All
-							</div>
-						</a>
+				<div class="wrapper">
+					<div class="messageContainer">
+						<p>Recently Viewed:</p>
 					</div>
-					<div class="mid quick">
-						<a href="#">
-							<div>
-								<i class="fi-book-bookmark"></i>
-								Recent Acquisitions
-							</div>
-						</a>
-					</div>
-					<div class="right quick">
-						<a href="#">
-							<div>
-								<i class="fi-torso"></i>
-								Review Account Status
-							</div>
-						</a>
+					<div class="viewedContainer">
+						<div class="row">
+							<a href="#">
+								<img src="assets/img/no_image.jpg">
+								<p>Book Title</p>
+								<p>Author, Year Published</p>
+								<p>Summary</p>
+							</a>
+						</div>
+						<div class="row">
+							<a href="#">
+								<img src="assets/img/no_image.jpg">
+								<p>Book Title</p>
+								<p>Author, Year Published</p>
+								<p>Summary</p>
+							</a>
+						</div>
+						<div class="row">
+							<a href="#">
+								<img src="assets/img/no_image.jpg">
+								<p>Book Title</p>
+								<p>Author, Year Published</p>
+								<p>Summary</p>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<!-- <div class="right block">
-				<div class="imgContainer">
+			<div class="mid block">
+				<div class="container">
+					<a href="#">[Edit]</a><a href="#">[Delete]</a>
+					<img src="assets/img/url.jpg">
+					<div class="information">
+						<div class="row">
+							<div class="col">
+								<label>Account Number:</label>
+							</div>
+							<div class="col">
+								<p>05000</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Title:</label>
+							</div>
+							<div class="col">
+								<p>Multimedia Systems: Algorithms, Standards, Industry Practices</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Author:</label>
+							</div>
+							<div class="col">
+								<p>P. Havaldar and G. Medioni</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Class:</label>
+							</div>
+							<div class="col">
+								<p>QA 76.757 H38 2010</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Date Received:</label>
+							</div>
+							<div class="col">
+								<p>8/10/2012</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Edition:</label>
+							</div>
+							<div class="col">
+								<p>64th</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Volume:</label>
+							</div>
+							<div class="col">
+								<p>1</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Pages:</label>
+							</div>
+							<div class="col">
+								<p>560</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Publisher:</label>
+							</div>
+							<div class="col">
+								<p>Course Technology</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Year:</label>
+							</div>
+							<div class="col">
+								<p>2010</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<label>Genre:</label>
+							</div>
+							<div class="col">
+								<p>Horror</p>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div> -->
+			</div>
+			<div class="right block">
+				<div class="wrapper">
+					<div class="messageContainer">
+							<p>Collections:</p>
+						</div>
+						<div class="collectionContainer">
+							<div class="row">
+								<img src="assets/img/no_image.jpg">
+								<p>No Collection</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 
