--- a/addBook.html
+++ b/addBook.html
@@ -68,7 +68,7 @@
 		<div class="divWrapper">
 			<div class="left block">
 				<div class="formContainer">
-					<p>Please type in material information:</p>
+					<p>Fill in the form with the information you want to commit.</p>
 					<form>
 						<input type="text" placeholder="Account Number">
 						<input type="text" placeholder="Title">
@@ -82,6 +82,7 @@
 							<input type="text" placeholder="Pages">
 						</div>
 						<div class="publication">
+							<input type="text" placeholder="Genre">
 							<input type="text" placeholder="Publisher">
 							<select>
 								<option>Year Published</option>
