--- a/home_user.html
+++ b/home_user.html
@@ -27,34 +27,28 @@
 					<a href="http://www.iacademy.edu.ph/site/"><img src="assets/img/logo-full.png"></a>
 				</div>
 				<div class="linkContainer">
-					<ol>
-						<ul class="library">
-							<a href="#">LIBRARY</a>
+					<ol class="user">
+						<ul class="search">
+							<a href="#">SEARCH</a>
 							<ul class="menu arrow_box">
-								<li><p>Home</p></li>
-								<li><a href="#">Go to Home</a></li>
-								<li><p>Materials</p></li>
-								<li><a href="#">View All</a></li>
-								<li><a href="#">View Recent Acquisitions</a></li>
-								<li><a href="#">View Pending Materials</a></li>
-								<li><a href="#">View Borrowed Materials</a></li>
-								<li><p>Announcements</p></li>
-								<li><a href="#">View All</a></li>
+								<li>
+									<form>
+										<input type="text" placeholder="Search"><button><i class="fi-magnifying-glass"></i></button>
+									</form>
+								</li>
 							</ul>
 						</ul>
 						<ul class="students">
-							<a href="#">STUDENTS</a>
+							<a href="#">ACCOUNT</a>
 							<ul class="menu arrow_box">
-								<li><p>Students</p></li>
-								<li><a href="#">View All</a></li>
-								<li><p>Account</p></li>
-								<li><a href="#">View Account Status</a></li>
-								<li><a href="#">View Materials Borrowed</a></li>
+								<li><a href="#">History</a></li>
+								<li><a href="#">Change Password</a></li>
 								<li><a href="#">Logout</a></li>
 							</ul>
 						</ul>
-						<ul><button><a href="#"><i class="fi-torso"></i></a></button></ul>
-						<ul><button><a href="#"><i class="fi-magnifying-glass"></i></a></button></ul>
+						<ul class="library">
+							<a href="#">BROWSE</a>
+						</ul>
 					</ol>
 				</div>
 			</nav>
