--- a/viewMaterial.html
+++ b/viewMaterial.html
@@ -255,6 +255,7 @@
 							<input type="text" placeholder="Pages">
 						</div>
 						<div class="publication">
+							<input type="text" placeholder="Genre">
 							<input type="text" placeholder="Publisher">
 							<select>
 								<option>Year Published</option>
@@ -299,13 +300,6 @@
 							<a href="https://twitter.com/iacademylibrary"><i class="fi-social-twitter"></i></a>
 						</div>
 					</div>
-					<!-- <div class="mid block">
-					</div>
-					<div class="right block">
-						<div class="info container">
-							<p>6th flr., iACADEMY Plaza, 324 Sen. Gil Puyat Avenue, Bel-air, Makati City, Philippines 1209</p>
-						</div>
-					</div> -->
 				</div>
 				<div class="copyright block">
 					<div class="messageContainer">
