--- a/viewMaterial.html
+++ b/viewMaterial.html
@@ -99,6 +99,7 @@
 			<div class="mid block">
 				<div class="container">
 					<a href="#" data-toggle="modal" data-target="#editMaterial">[Edit]</a><a href="#">[Delete]</a>
+					<a href="lendMaterial.html" class="lend">[Lend]</a>
 					<img src="assets/img/url.jpg">
 					<div class="information">
 						<div class="row">
