--- a/viewMaterial.html
+++ b/viewMaterial.html
@@ -66,7 +66,7 @@
 			<div class="left block">
 				<div class="wrapper">
 					<div class="messageContainer">
-						<p>Recently Viewed:</p>
+						<p>Recommended:</p>
 					</div>
 					<div class="viewedContainer">
 						<div class="row">
